# bigg

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: vs_ocornut_imgui.sc
include/: bigg.hpp
src/: bigg.cpp  bigg_assets.h  bigg_imgui.hpp
